--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
     </header>
 
     <main>
-        <h1>Em breve....</h1>
+        <section id="ficha">
+            <img src="imagens/deb-perfil.jpeg" alt="Débora Correia" class="foto">
+            <h1>Débora Correia</h1>
+            <p>Mini apresentação ~~em contrução~~ Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam distinctio ratione error voluptates, aut natus tempore, eius voluptate in dolore iusto maxime at excepturi? Aspernatur recusandae nisi tempore minus nulla.</p>
+
+            <div id="social">
+                <a href="https://www.linkedin.com/in/d%C3%A9bora-da-silva-correia-1653a415a/" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/Debbye-Correia" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/_debbye_/" target="_blank" rel="nofollow"><i class="fa-brands fa-square-instagram"></i></a>
+            </div>
+        </section>
+
+        <section id="detalhes">
+
+        </section>
     </main>
 
     <footer>
