--- a/index.html
+++ b/index.html
@@ -35,7 +35,25 @@
         </section>
 
         <section id="detalhes">
+            <article id="video">
+                <h2><i class="fa-solid fa-handshake"></i> Inserir video de apresentação</h2>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/vl0eatPehLs?si=v0sHNlV9vqR-bPss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </article> <!-- Fim article#video--> 
 
+            <article id="skills">
+                <h2><i class="fa-solid fa-brain"></i> Minhas Skills</h2>
+
+            </article> <!--Fim article#skills-->
+
+            <article id="formacao">
+                <h2><i class="fa-solid fa-graduation-cap"></i> Formação</h2>
+            </article> <!-- Fim article#formacao-->
+            
+            <article id="projetos">
+                <h2><i class="fa-solid fa-trowel-bricks"></i> Projetos que desenvolvi</h2>
+            </article> <!-- Fim article#projetos-->
         </section>
     </main>
 
