--- a/index.html
+++ b/index.html
@@ -192,6 +192,35 @@
 
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i> Formação</h2>
+
+                <div id="formacao-container">
+
+                    <div class="curso">
+                        <p class="periodo">2017 - 2018</p>
+                        <h3 class="instituicao">SENAI</h3>
+                        <p class="titulacao">Administração</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2017 - 2020</p>
+                        <h3 class="instituicao">Universidade Tuiuti do Paraná</h3>
+                        <p class="titulacao">Bacharelado em Biomedicina</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2025</p>
+                        <h3 class="instituicao">Curso em Video</h3>
+                        <p class="titulacao">Curso de HTML5 e CSS3</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2025 - 2026</p>
+                        <h3 class="instituicao">Curso em Video</h3>
+                        <p class="titulacao">Programação em Python</p>
+                    </div>
+
+                </div>
+
             </article> <!-- Fim article#formacao-->
             
             <article id="projetos">
