--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                             <div class="progresso" style="width: 90%;"></div>
                         </div>
                     </div>
-                </div>
 
-                <div id="skill-container">
                     <div class="item">
                         <div class="info">
                             <span class="nome">
@@ -75,9 +73,7 @@
                             <div class="progresso" style="width: 80%;"></div>
                         </div>
                     </div>
-                </div>
 
-                <div id="skill-container">
                     <div class="item">
                         <div class="info">
                             <span class="nome">
@@ -91,9 +87,7 @@
                             <div class="progresso" style="width: 20%;"></div>
                         </div>
                     </div>
-                </div>
 
-                <div id="skill-container">
                     <div class="item">
                         <div class="info">
                             <span class="nome">
@@ -107,9 +101,7 @@
                             <div class="progresso" style="width: 30%;"></div>
                         </div>
                     </div>
-                </div>
 
-                <div id="skill-container">
                     <div class="item">
                         <div class="info">
                             <span class="nome">
@@ -123,9 +115,7 @@
                             <div class="progresso" style="width: 95%;"></div>
                         </div>
                     </div>
-                </div>
 
-                <div id="skill-container">
                     <div class="item">
                         <div class="info">
                             <span class="nome">
@@ -139,9 +129,7 @@
                             <div class="progresso" style="width: 95%;"></div>
                         </div>
                     </div>
-                </div>
 
-                <div id="skill-container">
                     <div class="item">
                         <div class="info">
                             <span class="nome">
@@ -155,9 +143,7 @@
                             <div class="progresso" style="width: 90%;"></div>
                         </div>
                     </div>
-                </div>
 
-                <div id="skill-container">
                     <div class="item">
                         <div class="info">
                             <span class="nome">
@@ -171,10 +157,8 @@
                             <div class="progresso" style="width: 75%;"></div>
                         </div>
                     </div>
-                </div>
 
-                <div id="skill-container">
-                    <div class="item">
+                     <div class="item">
                         <div class="info">
                             <span class="nome">
                                <i class="fa-solid fa-person-rays"></i> Francês
@@ -225,12 +209,81 @@
             
             <article id="projetos">
                 <h2><i class="fa-solid fa-trowel-bricks"></i> Projetos que desenvolvi</h2>
+
+                <div id="projeto-container">
+                    <div class="projeto">
+                        <img src="imagens/projeto-01-videos.jpg" alt="Projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto de Videos</h3>
+                            <p>Projeto contruido para treinar a inserção de videos em nosso site.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, veritatis, culpa doloremque neque at soluta vero quas consequatur, dolor autem optio cumque beatae velit necessitatibus reiciendis quasi ipsam qui explicabo?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto">
+                        <img src="imagens/projeto-02-cordel.jpg" alt="Projeto 2" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Cordel</h3>
+                            <p>Projeto contruido para treinar efeito paralax em imagens.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, veritatis, culpa doloremque neque at soluta vero quas consequatur, dolor autem optio cumque beatae velit necessitatibus reiciendis quasi ipsam qui explicabo?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto">
+                        <img src="imagens/projeto-03-android.jpg" alt="Projeto 3" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Android</h3>
+                            <p>Projeto contruido para treinar conteudos e imagens dinâmicas.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, veritatis, culpa doloremque neque at soluta vero quas consequatur, dolor autem optio cumque beatae velit necessitatibus reiciendis quasi ipsam qui explicabo?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto">
+                        <img src="imagens/projeto-04-links.jpg" alt="Projeto 4" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Links</h3>
+                            <p>Projeto contruido para treinar inserção de links externos e navegação no site.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, veritatis, culpa doloremque neque at soluta vero quas consequatur, dolor autem optio cumque beatae velit necessitatibus reiciendis quasi ipsam qui explicabo?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto">
+                        <img src="imagens/projeto-05-login.jpg" alt="Projeto 5" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Login</h3>
+                            <p>Projeto contruido para treinar inserção formulários site, como uma tela login.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, veritatis, culpa doloremque neque at soluta vero quas consequatur, dolor autem optio cumque beatae velit necessitatibus reiciendis quasi ipsam qui explicabo?</p>
+                            </details>
+                        </div>
+                    </div>
+                </div>
+
+
             </article> <!-- Fim article#projetos-->
         </section>
     </main>
 
     <footer>
-
+        Portfólio desenvolvido por <a href="https://github.com/Debbye-Correia" target="_blank" rel="nofollow">Débora Correia</a> em 2025
     </footer>
 
     <script src="scripts/script.js"></script>
